# pybliotecario

./: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  Message.py  TelegramUtil.py  argument_parser.py  configurationDataTemplate.py  core.py  core_loop.py  on_call.py  on_command.py  on_schedule.py  pipupload.sh  pybliotecario.ini.example  pybliotecario.py  pyproject.toml  readme.md  sendmail.sh  setup.py  systemd_install.sh
.github/workflows/: codeql-analysis.yml  pytest.yml  pythonpublish.yml
components/: __init__.py  arxiv_functions.py  ip_lookup.py  pid.py  repositories.py  weather.py
src/pybliotecario/: Message.py  TelegramUtil.py  __init__.py  argument_parser.py  configurationDataTemplate.py  core_loop.py  customconf.py  on_call.py  on_cmd_message.py  on_cmdline.py  pybliotecario.py  utils.py
src/pybliotecario/backend/: Message.py  __init__.py  backend_test.py  basic_backend.py  facebook_util.py  readme.md  telegram_util.py
src/pybliotecario/components/: __init__.py  arxiv.py  arxiv_mod.py  component_core.py  dnd.py  github_component.py  ip_lookup.py  photocol.py  pid.py  reactions.py  repositories.py  scripts.py  stocks.py  system.py  twitter.py  weather.py  wiki.py
tests/: conftest.py  test_backend_test.py  test_component_ip_lookup.py  test_dnd.py  test_pid.py  test_stocks.py  test_system.py
